perf: use indexes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "format:json": "prettier --write \"**/*.json\" --ignore-path .gitignore"
+    "format:json": "prettier --write \"**/*.json\" --ignore-path .gitignore",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run -d src/infrastructures/database/data-source.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d src/infrastructures/database/data-source.ts"
   },
   "dependencies": {
     "@datadog/datadog-api-client": "^1.35.0",
